---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 4 September 2022
  Changes:
    - Increased performance of transformers by 25%
  Bugfixes:
    - Fixed transformers breaking when internal wires are disconnected
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 4 September 2022
  Features:
    - Added "Catch fire" mode, which sets overloaded poles on fire, damaging surrounding entities
  Compatability:
    - Added support for Py Alternative Energy
    - Increased default fuse maximum consumptions when playing with Krastorio2 to correspond to already-increased pole consumptions
  Bugfixes:
    - Fixed some poles missing their "Max. consumption" locale entry
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 12 August 2022
  Bugfixes:
    - Fixed crash when removing a transformer
    - Fixed some parts of transformers being left behind if destroyed by certain mod interactions 
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 11 August 2022
  Changes:
    - Connecting networks can now immediately trigger pole explosions instead of waiting up to 5 seconds
    - Increased performance of transformers by 60%
    - Removed log spam
    - Removed duplicate info icons in mod settings
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 27 May 2022
  Compatability:
    - Fixed and tested compatability with AAI Industry and BZ Lead
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 25 May 2022
  Compatability:
    - Attempted to fix crash when loading with some mods