@@ -2,6 +2,7 @@
 Version: 1.3.1
 Date: 4 September 2022
   Changes:
+    - Changed high energy interface colour from red to blue
     - Increased performance of transformers by 25%
   Bugfixes:
     - Fixed transformers breaking when internal wires are disconnected
